# undersea

./: .gitignore  Cargo.toml  README.md  flake.nix
undersea-lib/: Cargo.toml
undersea-lib/src/: episode.rs  error.rs  feed.rs  lib.rs  show.rs
undersea-tui/: Cargo.toml
undersea-tui/src/: app.rs  main.rs
undersea-tui/src/app/: mod.rs
undersea-tui/src/widgets/: episode_info.rs  episodes.rs  mod.rs  shows.rs
