[package]
name = "undersea-tui"
version = "0.0.0"
edition = "2024"

[dependencies]
undersea-lib = { path = "../undersea-lib" }
ratatui = "0.29"
anyhow = "1.0"
tokio = { version = "1.44" , features = ["rt", "rt-multi-thread", "macros"] }
ratatui-image = "5.0"
image = "0.25"

[lints]
workspace = true
