[package]
name = "undersea-tui"
version = "0.0.0"
edition = "2024"

[dependencies]
# If the first version number is not zero, just use it with no other numbers
# Otherwise specify second number, but not the patch number.
undersea-lib = { path = "../undersea-lib" }
ratatui = "0.29"
anyhow = "1"
tokio = { version = "1" , features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
